[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scenes/Entities/Creatures/FishardBot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game/Players.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/Client.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game/Environment.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Entities/Creatures/Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Game/Gamemode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Entities/Environment/Dummy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Entities/Environment/PowerUps/SpeedPowerUp.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_5.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_6.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_6.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_4.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Entities/Environment/PalmTree.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_4.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_1.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_3.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_1.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Entities/Environment/Effects/MeteorUp.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Entities/Environment/PowerUps/RapidFirePowerUp.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_5.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/Rock_2.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/Entities/Environment/Rocks/WaterRock_2.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Entities/Environment/PowerUps/HealthPowerUp.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scenes/Entities/Creatures/PlayerEntity.tscn" type="PackedScene" id=25]
[ext_resource path="res://Scenes/Entities/Spells/InvisibilityBall.tscn" type="PackedScene" id=26]
[ext_resource path="res://Scripts/Game/Room.gd" type="Script" id=27]
[ext_resource path="res://Scenes/Entities/Environment/Rock_2.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/ParticleEffects/DeathEffect.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scenes/BlueWorld.tscn" type="PackedScene" id=30]
[ext_resource path="res://Scenes/Entities/Environment/Effects/SmallSplash.tscn" type="PackedScene" id=31]
[ext_resource path="res://Scenes/Entities/Environment/LeafTree.tscn" type="PackedScene" id=32]
[ext_resource path="res://Scenes/Entities/Environment/DeadTree.tscn" type="PackedScene" id=33]
[ext_resource path="res://Scenes/Entities/Environment/PowerUps/ClonePowerUp.tscn" type="PackedScene" id=34]
[ext_resource path="res://Scenes/Game/CircleAnticipation.tscn" type="PackedScene" id=35]
[ext_resource path="res://Scenes/Game/ShaderPreCompiler.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scenes/Entities/Environment/GoldenGooeyFishard.tscn" type="PackedScene" id=37]
[ext_resource path="res://Scenes/Game/Paricles/Poof.tscn" type="PackedScene" id=38]
[ext_resource path="res://Scenes/Entities/Environment/BurntTree_1.tscn" type="PackedScene" id=39]
[ext_resource path="res://Scenes/Entities/Environment/Effects/BigSplash.tscn" type="PackedScene" id=40]
[ext_resource path="res://Scripts/Game/Spells/Spells.gd" type="Script" id=41]
[ext_resource path="res://Scenes/Entities/Environment/Rock_1.tscn" type="PackedScene" id=42]
[ext_resource path="res://Scenes/Entities/Environment/TheFishBall.tscn" type="PackedScene" id=43]
[ext_resource path="res://Scenes/Entities/Environment/StrongDummy.tscn" type="PackedScene" id=44]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool tint;
uniform vec4 tint_color: hint_color;
uniform vec2 ripple_pos = vec2(0.5,0.5);
uniform float force = 0.0;
uniform bool greyscale = false;

void fragment() {
	
	float circle_gradient = 1.0 - smoothstep(1.0, 0.6, 1.0 - distance(ripple_pos, SCREEN_UV));
	float sin_pattern = sin(10.0*(distance(ripple_pos, SCREEN_UV) - TIME*1.0)) * circle_gradient;
	vec2 displacement = normalize(SCREEN_UV - ripple_pos) * sin_pattern;
	
	vec4 bg = texture(SCREEN_TEXTURE, SCREEN_UV - displacement*force);
	
	vec4 color = bg;
	
	if(greyscale){
		color.rgb = vec3((bg.r + bg.g + bg.b )/ 3.0);
	}
	if(tint){
		color.rgba = color.rgba * tint_color.rgba;
	}
	
	COLOR = color;
	//COLOR = vec4(SCREEN_UV.r, SCREEN_UV.g, 0.0, 1.0);
}

"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/tint = false
shader_param/tint_color = Color( 0.843137, 0.917647, 0.964706, 1 )
shader_param/ripple_pos = Vector2( 0.5, 0.5 )
shader_param/force = 0.0
shader_param/greyscale = false

[sub_resource type="Animation" id=3]
resource_name = "ripple"
tracks/0/type = "value"
tracks/0/path = NodePath("PostProcess:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.02, -0.005, 0.0 ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1000, 0.1, 1000 )

[node name="Room" type="Spatial"]
script = ExtResource( 27 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PostProcess" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.705882, 0.764706, 0.784314, 0.0941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PostProcessAnimations" type="AnimationPlayer" parent="CanvasLayer"]
anims/ripple = SubResource( 3 )

[node name="ShaderPreCompiler" parent="." instance=ExtResource( 36 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )

[node name="Entities" type="Spatial" parent="."]

[node name="DestroyedEntities" type="Spatial" parent="."]

[node name="Client" parent="." instance=ExtResource( 3 )]

[node name="Stats" parent="Client" index="1"]
anchor_left = 0.000801086
anchor_right = 1.00081

[node name="Gamemode" parent="." instance=ExtResource( 6 )]

[node name="Players" type="Spatial" parent="."]
script = ExtResource( 2 )
player_scene = ExtResource( 25 )
fishard_bot_scene = ExtResource( 1 )
dead_player_scene = ExtResource( 29 )
poof_scene = ExtResource( 38 )
client_node = NodePath("../Client")

[node name="Environment" type="Node" parent="."]
script = ExtResource( 4 )
big_rock_1_scene = ExtResource( 42 )
big_rock_2_scene = ExtResource( 28 )
palm_tree_scene = ExtResource( 14 )
meteor_up_scene = ExtResource( 19 )
big_splash = ExtResource( 40 )
small_splash = ExtResource( 31 )
dead_tree = ExtResource( 33 )
leaf_tree = ExtResource( 32 )
turret_scene = ExtResource( 5 )
speed_powerup_scene = ExtResource( 9 )
health_powerup_scene = ExtResource( 24 )
clone_powerup_scene = ExtResource( 34 )
rapidfire_powerup_scene = ExtResource( 20 )
water_rock_1 = ExtResource( 16 )
water_rock_2 = ExtResource( 23 )
water_rock_3 = ExtResource( 8 )
water_rock_4 = ExtResource( 13 )
water_rock_5 = ExtResource( 10 )
water_rock_6 = ExtResource( 12 )
rock_1 = ExtResource( 18 )
rock_2 = ExtResource( 22 )
rock_3 = ExtResource( 17 )
rock_4 = ExtResource( 15 )
rock_5 = ExtResource( 21 )
rock_6 = ExtResource( 11 )
burnt_tree_1 = ExtResource( 39 )
gooey_golden_fishard = ExtResource( 37 )
invisibility_ball = ExtResource( 26 )
dummy_scene = ExtResource( 7 )
strong_dummy_scene = ExtResource( 44 )
fish_ball_scene = ExtResource( 43 )

[node name="Spells" type="Node" parent="."]
script = ExtResource( 41 )
land_anticipation_indicator_scene = ExtResource( 35 )

[node name="RespawnAllBugFixTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BlueWorld" parent="." instance=ExtResource( 30 )]

[node name="AimPlane" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape" type="CollisionShape" parent="AimPlane"]
shape = SubResource( 4 )

[connection signal="timeout" from="RespawnAllBugFixTimer" to="." method="_on_RespawnAllBugFixTimer_timeout"]

[editable path="Client"]
[editable path="Client/Chat/Chat"]
